UI: Add Discord links to navigation

--- a/dillo/templates/dillo/components/_footer.pug
+++ b/dillo/templates/dillo/components/_footer.pug
@@ -15,6 +15,12 @@ footer.site-footer
 			target="_blank",
 			title="{% trans 'Follow Animato on Instagram!' %}")
 			i.i-instagram
+		a.btn(
+			data-toggle="tooltip",
+			href="https://discord.gg/N7gJzaf",
+			target="_blank",
+			title="{% trans 'Animato on Discord!' %}")
+			i.i-discord
 
 	.footer-nav
 		ul
