--- a/dillo/templates/dillo/theater/short_list.pug
+++ b/dillo/templates/dillo/theater/short_list.pug
@@ -16,7 +16,7 @@
 
 | {% block stream %}
 | {% if object_list %}
-.row.row-cols-1.row-cols-sm-2.row-cols-md-3.row-cols-lg-2.row-cols-xl-3
+.row.cards-row
   | {% for short in object_list %}
   .col
     .card-borderless
@@ -28,9 +28,9 @@
           height="{{ im.height }}",
           alt="{{ short.title }}")
       | {% endthumbnail %}
-      .card-body
-        a.card-title(href="{% url 'short-detail' short.pk %}")
-          | {{ short.title }}
+      .card-header
+        a.card-header-text(href="{% url 'short-detail' short.pk %}")
+          .card-title {{ short.title }}
   | {% endfor %}
 | {% else %}
 .post-list-empty
