UI: Style tweaks to footer info

--- a/dillo/templates/dillo/components/_footer.pug
+++ b/dillo/templates/dillo/components/_footer.pug
@@ -67,7 +67,5 @@ footer.site-footer
 
 		| {% project_version as VERSION %}
 		| {% if VERSION %}
-		span
-			| ·
-		span {{ VERSION }}
+		span #[span.separator &middot;&nbsp;] {{ VERSION }}
 		| {% endif %}
