UI Footer: Explain what's the version number

--- a/dillo/templates/dillo/components/_footer.pug
+++ b/dillo/templates/dillo/components/_footer.pug
@@ -67,5 +67,6 @@ footer.site-footer
 
 		| {% project_version as VERSION %}
 		| {% if VERSION %}
-		span #[span.separator &middot;&nbsp;] {{ VERSION }}
+		span(title='{% trans "Version running under the hood" %}')
+			| #[span.separator &middot;&nbsp;] {{ VERSION }}
 		| {% endif %}
