Navbar: Rename Chat to Discord

--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -46,9 +46,9 @@ nav.nav-primary.navbar.navbar-expand
 						span {% trans 'Jobs' %}
 
 				li
-					a(href="https://discord.gg/N7gJzaf", title="{% trans 'Animato on Discord' %}", target="_blank")
+					a(href="https://discord.gg/N7gJzaf", title="{% trans 'Animato on Discord!' %}", target="_blank")
 						i.i-discord
-						span {% trans 'Chat' %}
+						span {% trans 'Discord' %}
 
 				li(class="{% if '/bookmarks' in request.path_info %}active{% endif %}")
 					a(href="{% url 'bookmarks' %}", title="{% trans 'Your Saved Bookmarks' %}")
