Refactor theater into /shorts and /reels
Improves clarity in the backend codebase. Several styles are still
named 'theater' and should be renamed to 'gallery' or 'grid' in the
future.

--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -26,7 +26,7 @@ nav.nav-primary.navbar.navbar-expand
 						span {% trans 'Reels' %}
 
 				li(class="{% if '/shorts' in request.path_info %}active{% endif %}")
-					a(href="{% url 'short-list' %}", title="{% trans 'Shorts Theater' %}")
+					a(href="{% url 'short-list' %}?sort=recent", title="{% trans 'Shorts Theater' %}")
 						i.i-shorts
 						span {% trans 'Shorts' %}
 
