--- a/dillo/templates/dillo/emails/base.pug
+++ b/dillo/templates/dillo/emails/base.pug
@@ -112,7 +112,7 @@ html(style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_base}; m
 											td.aligncenter.content-block(style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_small}; vertical-align: top; color: #{css_color_secondary}; text-align: center; margin: 0; padding: 0 0 20px;", align='center', valign='top')
 												a(style="color: #{css_color_secondary} !important", href='#{label_brand_url}/explore/') explore
 												span(style="margin: 0 8px") &middot;
-												a(style="color: #{css_color_secondary} !important", href='#{label_brand_url}/theater/reels/') reels
+												a(style="color: #{css_color_secondary} !important", href='#{label_brand_url}/reels/') reels
 												span(style="margin: 0 8px") &middot;
 												a(style="color: #{css_color_secondary} !important", href='#{label_brand_url}/events') events
 												span(style="margin: 0 8px") &middot;
