--- a/dillo/templates/dillo/shorts/short_list.pug
+++ b/dillo/templates/dillo/shorts/short_list.pug
@@ -7,7 +7,7 @@
 | {% block stream_nav %}
 .nav-tabbar
   | {% block stream_nav_items %}
-  | {% include 'dillo/theater/_navigation_theater.pug' with is_shorts=True %}
+  | {% include 'dillo/shorts/_navigation_short.pug' %}
   | {% endblock stream_nav_items %}
 
   | {% include 'dillo/components/_pagination.pug' with page=page_obj label="Short" %}
